@@ -1536,16 +1536,15 @@
 (pushnew "XPM" custom:*system-package-list* :test #'string=)
 
 ;; some functions are not implemented:
-(eval-when (compile)
-  (defmacro undefined (name)
-    `(define-compiler-macro ,name (&whole form &rest args)
-       (declare (ignore args))
-       (progn (warn "~S is not implemented: ~S" ',name form)
-              form))))
-(without-package-lock ("XLIB")
+(macrolet ((undefined (name)
+             `(define-compiler-macro ,name (&whole form &rest args)
+                (declare (ignore args))
+                (progn (warn "~S is not implemented: ~S" ',name form)
+                       form))))
 (undefined XLIB:DISPLAY-RESOURCE-ID-BASE)
 (undefined XLIB:DISPLAY-RESOURCE-ID-MASK)
 (undefined XLIB:DISPLAY-TRACE)
+(undefined XLIB:DRAW-GLYPH)
 (undefined XLIB:DRAW-IMAGE-GLYPH)
 (undefined XLIB:TRANSLATE-DEFAULT)
 (undefined XLIB:QUEUE-EVENT)
