@@ -1,5 +1,10 @@
 2005-10-17  Sam Steingold  <sds@gnu.org>
 
+	* modules/clx/new-clx/clx.lisp (DRAW-GLYPH): undefined;
+	use MACROLET instead of EVAL-WHEN+DEFMACRO
+
+2005-10-17  Sam Steingold  <sds@gnu.org>
+
 	* modules/readline/readline.lisp (readline-reader): return NIL on EOF
 	(resize-terminal, set-screen-size, get-screen-size): added
 	(readline-state): new variable together with its constants
